# AItodo

./: README.md  package.json  pnpm-lock.yaml  tsconfig.json
.sisyphus/plans/: ai-todo-mvp.md
docs/: manual-testing-plan.md
openspec/: ai-todo-system-spec.md  project.md
openspec/changes/implement-ai-todo-mvp/: proposal.md  tasks.md
openspec/changes/implement-ai-todo-mvp/specs/data-persistence/: spec.md
openspec/changes/implement-ai-todo-mvp/specs/research-automation/: spec.md
openspec/changes/implement-ai-todo-mvp/specs/research-display/: spec.md
openspec/changes/implement-ai-todo-mvp/specs/system-notifications/: spec.md
openspec/changes/implement-mvp-phase1/: design.md  proposal.md  tasks.md
src/: App.tsx  types.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/scripts/: deep_research.js
src-tauri/src/: main.rs
src-tauri/src/core/: cmd.rs  constant.rs  db.rs  mod.rs  research.rs  setup.rs  todo.rs  window.rs
src-tauri/src/db/: mod.rs  research_service.rs  todo_service.rs
src-tauri/src/migrations/: 001_init.sql
src-tauri/src/models/: mod.rs  research_result.rs  settings.rs  todo.rs  webview_session.rs
src/components/: WinTitlebar.tsx
src/hooks/: useTodoContext.tsx
src/stores/: todoStore.ts
src/styles/: todo.css
src/view/: Titlebar.tsx
src/view/Todo/: index.tsx
src/view/Todo/components/: MarkdownViewer.tsx  ResearchProgress.tsx  Toast.tsx  TodoCreate.tsx  TodoDetail.tsx  TodoItem.tsx  TodoLayout.tsx  TodoList.tsx  TodoSidebar.tsx
(+8 files in other folders)
