[package]
name = "chatgpt"
version = "0.0.0"
description = "ChatGPT Desktop Application (Unofficial)"
authors = ["lencx <cxin1314@gmail.com>"]
repository = "https://github.com/lencx/ChatGPT"
license = "AGPL-3.0"
edition = "2021"
rust-version = "1.77.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.9.5", features = ["unstable", "devtools"] }
tokio = { version = "1.37.0", features = ["macros"] }
tauri-plugin-shell = "2.3.4"
tauri-plugin-opener = "2.5.3"
tauri-plugin-dialog = "2.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1.19.0"
log = "0.4.21"
anyhow = "1.0.83"
dark-light = "1.1.1"
regex = "1.10.4"
semver = "1.0.23"
tauri-plugin-os = "2.3.2"
tauri-plugin-notification = "2.3.3"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1.8", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
